@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class Skill {
    - String name
    - validateSkill(Skill)
    + Skill(name)
}

class AssignSkillController {

    + AssignSkillController()
    + assignSkill(name)
    + AssignSkillCollaborator(collaborator,skill)
    + getCollaboratorList(name)
    + skillListAdd(skill)
    + getSkillList(skillListName)
}

class AssignSkillUI {
}

class Document{
    docType
    number
}

class Collaborator {
    -String name
    -List<Skill> skillList
    -Job job
    -Date dateOfBirth
    -Date admissionDate
    -String phoneNumber
    -String email
    -int taxpayer
    -Document document
    -Adress adress
    + Collaborator(name,adress,document,dateOfBirth, admissionDate,phoneNumber, email, taxpayer)
    +skillListAdd(Skill)
}

class HumanResourcesManager {
}

class Repositories {

    - Repositories()
    + getInstance() : Repositories
    + getSkillRepository()
}

class SkillRepository {
    - List <Skill> skill
    - validateSkill(Skill)
    - skillListAdd(skill)
    - getSkillList(skillListName)

}

class CollaboratorRepository {

+getCollaboratorList(name)
+AssignSkillCollaborator(collaborator,skill)
}

AssignSkillController .> Repositories : repositories
AssignSkillUI .> AssignSkillController
Repositories -> Repositories : instance
Repositories --> "1" CollaboratorRepository : CollaboratorRepository
Repositories --> "1" SkillRepository : SkillRepository
SkillRepository "1" --> "*" Skill : skill
Collaborator  <|--  HumanResourcesManager
AssignSkillController ..> Skill
AssignSkillController ..> SkillRepository

HumanResourcesManager <--  Skill: AssignBy
Collaborator "*" --> "*" Skill : has
Collaborator .> CollaboratorRepository : collaboratorRepository
Collaborator "1" --> "1" Document : has



@enduml